# CH32V307-UF2-Bootloader

./: CMakeLists.txt  LICENSE  README.md  build.bat
APP/: Internal_Flash.c  Internal_Flash.h  SW_UDISK.c  board.c  board.h  ch32v30x_it.c  ghostfat.c  main.c  uf2.h
Ld/: Link.ld
UF2/: Example.uf2
output/: output.hex
